12106 libshell: cast between incompatible function types Reviewed by: John Levon <john.levon@joyent.com> Approved by: Robert Mustacchi <rm@fingolfin.org>